tests/machine/x/c/map_int_key.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_int_key.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_int_key.c:59:29: warning: passing argument 3 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   59 |   map_int_bool_put(&_t1, 1, "a");
      |                             ^~~
      |                             |
      |                             char *
/workspace/mochi/tests/machine/x/c/map_int_key.c:38:60: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_int_key.c:60:29: warning: passing argument 3 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   60 |   map_int_bool_put(&_t1, 2, "b");
      |                             ^~~
      |                             |
      |                             char *
/workspace/mochi/tests/machine/x/c/map_int_key.c:38:60: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_int_key.c:61:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   61 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/map_int_key.c:62:19: error: request for member ‘data’ in something not a structure or union
   62 |   printf("%s\n", m.data[1]);
      |                   ^

   1: #include <stdio.h>
